@@ -15,7 +15,8 @@ require_once dirname(__FILE__) . '/DefaultPlatform.php';
  *
  * @author     Hans Lellelid <hans@xmpl.org> (Propel)
  * @author     Martin Poeschl <mpoeschl@marmot.at> (Torque)
- * @version    $Revision: 2090 $
+ * @author     Niklas Närhinen <niklas@narhinen.net>
+ * @version    $Revision: 2208 $
  * @package    propel.generator.platform
  */
 class PgsqlPlatform extends DefaultPlatform
@@ -378,6 +379,8 @@ ALTER TABLE %s ALTER COLUMN %s;
 				case 'defaultValueType':
 					continue;
 				case 'size':
+				case 'type':
+				case 'scale':
 					$sqlType = $toColumn->getDomain()->getSqlType();
 					if ($toColumn->isAutoIncrement() && $table && $table->getIdMethodParameters() == null) {
 						$sqlType = $toColumn->getType() === PropelTypes::BIGINT ? 'bigserial' : 'serial';
@@ -432,5 +435,27 @@ ALTER TABLE %s ALTER COLUMN %s;
 			$ret .= $this->getAddColumnDDL($column);
 		}
 		return $ret;
+	}
+	
+	/**
+	 * Overrides the implementation from DefaultPlatform
+	 * 
+	 * @author     Niklas Närhinen <niklas@narhinen.net>
+	 * @return     string
+	 * @see        DefaultPlatform::getDropIndexDDL
+	 */
+	public function getDropIndexDDL(Index $index)
+	{
+		if ($index instanceof Unique) {
+			$pattern = "
+	ALTER TABLE %s DROP CONSTRAINT %s;
+	";
+			return sprintf($pattern, 
+				$this->quoteIdentifier($index->getTable()->getName()),
+				$this->quoteIdentifier($index->getName())
+			);
+		} else {
+			return parent::getDropIndexDDL($index);
+		}
 	}
 }
